# youtube.pub

./: .gitignore  AGENT.md  README.md  biome.json  bts.jsonc  package.json  tsconfig.json
.cursor/rules/: ultracite.mdc
.github/: copilot-instructions.md
.github/workflows/: e2e-tests.yml  release.yml  update-release-notes.yml
.husky/: pre-commit
.ruler/: bts.md  ruler.toml
apps/desktop/: .env.example  .gitignore  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: package-lock.json  package.json
apps/desktop/e2e/test/: editor.spec.js  gallery.spec.js  setup.js  trash.spec.js  video_extractor.spec.js
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  secure_storage.rs  security.rs
apps/desktop/src/components/: ApiKeyDialog.tsx  BackgroundRemovalQueue.tsx  BottomToolbar.tsx  ExportDialog.tsx  Gallery.tsx  GalleryPicker.tsx  GeminiImageDialog.tsx  GeminiImagePage.tsx  Header.tsx  ImageCompareSlider.tsx  ImageEditor.tsx  LicenseActivation.tsx  (+8 more)
apps/extension/: package.json
apps/fumadocs/: package.json
apps/native/: app.json  package.json
apps/native/app/: _layout.tsx
apps/native/components/: sign-in.tsx  sign-up.tsx
apps/native/lib/: auth-client.ts
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: next.config.ts  package.json
apps/web/src-tauri/: tauri.conf.json
(+103 files in other folders)
