[package]
name = "youtube-pub"
version = "0.1.0"
description = "YouTube Thumbnail Studio"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_pub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-decorum = "1.1"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure Storage Dependencies
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"
